<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_white" >
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlimited_talktime"
        android:textSize="16dp"
        android:textColor="@color/header_bg"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        />
	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_talktime_offer"
        android:textSize="16dp"
        android:textColor="@color/header_bg"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_earn"
        android:textSize="16dp"
        android:textColor="@color/header_bg"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        />
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@color/gray"
	    >
	    <LinearLayout 
	        android:layout_width="74dp"
	        android:layout_height="74dp"
			android:background="@drawable/rectangular_rounded_shape"
			android:layout_margin="5dp"
	        >
	        <ImageView 
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_margin="1dp"
	            android:src="@drawable/ic_launcher"
	            android:scaleType="fitXY"
	            android:id="@+id/app_image"
	            />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        >
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="App Name"
	        android:textSize="15dp"
	        android:textColor="@color/black"
	        android:textStyle="bold"
	        android:layout_marginTop="7dp"
	        android:layout_marginLeft="4dp"
	        android:id="@+id/app_name"
	        />
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="App Name"
	        android:textSize="15dp"
	        android:textColor="@color/black"
	        android:textStyle="bold"
	        android:layout_marginTop="7dp"
	        android:layout_marginLeft="4dp"
	        android:id="@+id/app_detail"
	        />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="54dp"
	        android:layout_height="50dp"
	        android:layout_margin="3dp"
	        android:background="@drawable/black_rounded_shape"
	        >
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:text="Rs.20"
	            android:textSize="16dp"
	            android:textColor="@color/green"
	            android:background="@color/white"
	            android:gravity="center"
	            android:id="@+id/app_amount"
	            />
	    </LinearLayout>
	</LinearLayout>
	<View 
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:background="@color/black"
	    />
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="80dp"
	    android:orientation="horizontal"
	    android:minHeight="50dp"
	    >
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="80dp"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:background="@color/whats_share_bg"
	        android:id="@+id/whatsapp_share"
	        >
	        <ImageView 
	            android:layout_width="30dp"
	            android:layout_height="30dp"
	            android:src="@drawable/chat_share_icon"
	            android:layout_marginTop="5dp"
	            />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/whats_app"
	            android:textSize="14dp"
	            android:textColor="@color/white"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="5dp"
	            />
	        
	    </LinearLayout>
	  	<View 
	  	    android:layout_width="1dp"
	  	    android:layout_height="80dp"
	  	    android:background="@color/black"
	  	    />
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="80dp"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:background="@color/sms_share_bg"
	        android:id="@+id/sms_share"
	        >
	        <ImageView 
	            android:layout_width="30dp"
	            android:layout_height="30dp"
	            android:src="@drawable/free_sms_share_icon"
	            android:layout_marginTop="5dp"
	            />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/free_sms"
	            android:textSize="14dp"
	            android:textColor="@color/white"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="5dp"
	            />
	    </LinearLayout>
	    <View 
	  	    android:layout_width="1dp"
	  	    android:layout_height="80dp"
	  	    android:background="@color/black"
	  	    />
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="80dp"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:background="@color/email_share_bg"
	        android:id="@+id/email_share"
	        >
	        <ImageView 
	            android:layout_width="30dp"
	            android:layout_height="30dp"
	            android:src="@drawable/email_share_icon"
	            android:layout_marginTop="5dp"
	            />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/email"
	            android:textSize="14dp"
	            android:textColor="@color/white"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="5dp"
	            />
	    </LinearLayout>
	    <View 
	  	    android:layout_width="1dp"
	  	    android:layout_height="80dp"
	  	    android:background="@color/black"
	  	    />
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="80dp"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:background="@color/other_share_bg"
	        android:id="@+id/other_share"
	        >
	        <ImageView 
	            android:layout_width="30dp"
	            android:layout_height="30dp"
	            android:src="@drawable/others_share_icon"
	            android:layout_marginTop="5dp"
	            />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/others"
	            android:textSize="14dp"
	            android:textColor="@color/white"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="5dp"
	            />
	    </LinearLayout>
	    
	    
	</LinearLayout>
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:background="@color/black"
	    />
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/share_link"
	    android:textSize="16dp"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_gravity="center"
	    android:layout_marginTop="15dp"
	    android:layout_marginBottom="5dp"
	    />
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:minHeight="38dp"
	    android:background="@drawable/black_rounded_shape"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    >
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:background="@drawable/rectangular_rounded_shape"
	        android:layout_margin="1dp"
	        android:paddingLeft="4dp"
	        android:text="http://"
	        android:textSize="15dp"
	        android:textColor="@color/black"
	        android:gravity="center_vertical"
	        android:id="@+id/app_share_url"
	        />
	</LinearLayout>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="Tap hold to copy"
	    android:textSize="18dp"
	    android:textColor="@color/black"
	    android:layout_gravity="center"
	    android:layout_marginTop="15dp"
	    android:id="@+id/tap_text"
	    />
	</LinearLayout>
	</ScrollView>
</LinearLayout>
